--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,10 @@
 	</properties>
 	<dependencies>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,11 +58,11 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
-		</dependency> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
